src/arboretum/snapshots/ascii_renderer__arboretum__species__tests__arboretum_pleach.snap
---
source: src/arboretum/species.rs
expression: "species_grid(TreeStyle::Pleach)"
---
                                  
                                  
                                  
            ╷───╷─╷╷────╷         
            │┆  │├││  ┆ │         
            │   ││││    │         
            ╰──╮│├─◆────╯         
               ╰─├─╯              
                 ├                
                 │                
                 │                
                 │                
                 │                
                ╱│╲               
               ╱─│─╲              
             ╘◆══╨══◇╛
