src/arboretum/snapshots/ascii_renderer__arboretum__species__tests__arboretum_willow.snap
---
source: src/arboretum/species.rs
expression: "species_grid(TreeStyle::Willow)"
---
                                  
                                  
                                  
                                  
                                  
                                  
                 ┬                
              ╎╎⠿│  ╎             
               ╎ │╎ ┆             
              ╎⠿╎ ├ ╎             
              ╎╎╎ │ ┆             
             ╎╎  ├╎╎┆             
            ╎╎   │╎  ┆            
           ╎    ╱│╲╎ ┆            
           ╎ ╎ ╱─│─╲              
             ╘◆══╨══◇╛
